# claude-net

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  package.json
.claude/: .cc2cc-session-id
.github/workflows/: docker.yml
docs/: ASKUSERQUESTION_TUI_PROTOCOL.md  CHANNEL_LIVENESS_PHASE_1.md  CHANNEL_LIVENESS_PHASE_1_DEV_REPORT.md  CHANNEL_LIVENESS_PHASE_2.md  CHANNEL_LIVENESS_PHASE_2_DEV_REPORT.md  CHANNEL_LIVENESS_PHASE_3.md  CHANNEL_LIVENESS_PHASE_3_DEV_REPORT.md  CHANNEL_LIVENESS_PLAN.md  CHANNEL_LIVENESS_SPEC.md  CLAUDE_CODE_PATCHING_GUIDE.md  CLAUDE_NET_BRAINSTORM.md  CLAUDE_NET_PHASE_0.md  CLAUDE_NET_PHASE_1.md  CLAUDE_NET_PHASE_2.md  CLAUDE_NET_PHASE_3.md  CLAUDE_NET_PHASE_4.md  CLAUDE_NET_PHASE_5.md  CLAUDE_NET_PHASE_6.md  CLAUDE_NET_PLAN.md  CLAUDE_NET_SPEC.md  HUB_OBSERVABILITY_PHASE_1_DEV_REPORT.md  MESSAGE_ACK_BRAINSTORM.md  MESSAGE_ACK_SPEC.md  MIRROR_SESSION_IMPLEMENTATION_PLAN.md  MIRROR_SESSION_PHASE_0.md  MIRROR_SESSION_PHASE_1.md  MIRROR_SESSION_PHASE_2.md  MIRROR_SESSION_PHASE_3.md  MIRROR_SESSION_PHASE_4.md  MIRROR_SESSION_PLAN.md  PATCHER_EXTRACTION_PLAN.md  PATCHER_V2_ARCHITECTURE.md  PLUGIN_REFACTOR_PLAN.md
docs/architecture/: SAD.md  workspace.dsl
patcher-ext/: README.md  pyproject.toml
patcher-ext/claude_net_patcher/: __init__.py  channels.py
scripts/: capture-tool-fixtures.ts  screenshot-dashboard.ts  test-telie.ts
src/hub/: api.ts  bin-server.ts  dashboard.html  event-log.ts  host-registry.ts  host.ts  hub-url.ts  index.ts  mirror-store.ts  mirror.ts  router.ts  (+9 more)
(+91 files in other folders)
